--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,25 @@ services:
     build: ./node-app
     ports:
       - "3000:3000"
+    networks:
+      - monitoring
+
   prometheus:
     image: prom/prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
+    networks:
+      - monitoring
+
   grafana:
     image: grafana/grafana
     ports:
-      - "3000:3000"
+      - "3001:3000"
+    networks:
+      - monitoring
+
+networks:
+  monitoring:
+    driver: bridge
