--- a/node-app/package.json
+++ b/node-app/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "app",
+  "name": "node-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Node.js application for monitoring",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "prom-client": "^15.1.3"
+    "express": "^4.17.1",
+    "prom-client": "^14.0.1"
   }
 }
